--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6916,13 +6916,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #1abc9c;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #148f77 !important;
+  background-color: #148f77;
 }
 
 .bg-secondary {
@@ -10723,7 +10723,6 @@ a.text-dark:hover, a.text-dark:focus {
     font-size: 1.5em;
   }
 }
-
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
